[#25][fix] fix position of alignItems

--- a/src/components/filecss/IntervenantStyle.css
+++ b/src/components/filecss/IntervenantStyle.css
@@ -1,5 +1,5 @@
 .align_item {
-  position: absolute;
-  top: 10%;
+  display: flex;
+  flex-direction: column;
   width: 35%;
 }
